Truly move to Java 8
Sadly, release with takari-lifecycle has not such effect.